--- a/ds_coding_challenge.ipynb
+++ b/ds_coding_challenge.ipynb
@@ -1704,13 +1704,8 @@
     "The idea is not to look at the entire set of data, but to see from a subset which result is more relevant for us.\n",
     "- The idea is not to look at the entire set of data, but to see from a subset which result is more relevant for us. One of the approaches is to map the query Q itself, which fetches the corresponding results q1,q2..qn, with each pair of fetched results, and to find out which one is more relevant between them: F(Q, q1,q2)=1 F(Q, q1, qn)=0. This is very reminiscent of the data we have, even the game of football itself. Q would be the league id, and q1, q2 would be the club id, with their attributes, and the result would be easily obtained by comparing the rank at the end of the season.\n",
     "- However, the implementation of this is not so simple. I struggled for a few days, but in the end I didn't succeed.\n",
-    "- however, I'll leave the code in a comment, and briefly explain what the idea was"
+    "- however, I'll leave the code in a comment"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1964,7 +1959,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_cols = [col for col in test_data.columns if col not in['club_id', 'league_id']]\n",
+    "num_cols = [col for col in test_data.columns if col not in[\"club_id\", \"league_id\"]]\n",
     "\n",
     "scaler = StandardScaler()\n",
     "test_data[num_cols] = scaler.fit_transform(test_data[num_cols])"
@@ -1981,20 +1976,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_rankings = [int(round(res))for res in y_test_data]"
+    "final_data = pd.DataFrame({\"club_id\":test_data[\"club_id\"], \"league_id\":test_data[\"league_id\"], \"predicted_league_rank\":y_test_data})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
-    "league_rank_predictions = pd.DataFrame({\"club_id\":test_data[\"club_id\"], \"predicted_league_rank\":final_rankings})\n",
+    "final_data[\"rank_within_league\"] = final_data.groupby(\"league_id\")[\"predicted_league_rank\"].rank(ascending=False, method=\"dense\")\n",
+    "\n",
+    "final_data[\"scaled_rank\"] = final_data.groupby(\"league_id\")[\"rank_within_league\"].transform(lambda x: 15 - x)\n",
+    "final_data[\"scaled_rank\"] = final_data[\"scaled_rank\"].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "league_rank_predictions = pd.DataFrame({\"club_id\":test_data[\"club_id\"], \"predicted_league_rank\":final_data[\"scaled_rank\"]})\n",
     "league_rank_predictions.to_csv(\"league_rank_predictions.csv\", index=False)"
    ]
   }
